--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -59,39 +59,39 @@
 
 Для кнопки используются такие свойства CSS как:
 
-{ <---  всегда
+{ <---  всегда.
 
-    margin-left: 35%; <--- внешний отступ слева направо 35%
+    margin-left: 35%; <--- внешний отступ слева направо 35%.
     
-    margin-top: 5%; <--- внешний отступ сверху вниз 5%
+    margin-top: 5%; <--- внешний отступ сверху вниз 5%.
     
-    width: 30%; <--- ширина 30%
+    width: 30%; <--- ширина 30%.
     
-    height: 80px; <--- высота 80 пикселей
+    height: 80px; <--- высота 80 пикселей.
     
-    border-radius: 3px; <--- радиус 3 пикселя
+    border-radius: 3px; <--- радиус 3 пикселя.
     
-    background-color: #ffa500; <--- задний фон этого цвета(#ffa500)
+    background-color: #ffa500; <--- задний фон этого цвета(#ffa500).
     
-    border: 1px solid #e2dc16; <--- рамка 1 пиксель сплошного этого цвета(#e2dc16)
+    border: 1px solid #e2dc16; <--- рамка 1 пиксель сплошного этого цвета(#e2dc16).
     
-    outline: none; <--- убирает цвет, стиль и ширину внешней границы
+    outline: none; <--- убирает цвет, стиль и ширину внешней границы.
     
-    box-shadow: 0 0 40px #0400ff; <--- делает тень 40 пикселей этого цвета(#0400ff)
+    box-shadow: 0 0 40px #0400ff; <--- делает тень 40 пикселей этого цвета(#0400ff).
     
-    cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки
+    cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки.
     
-    font-size: 30px; <--- размер символов 30 пикселей
+    font-size: 30px; <--- размер символов 30 пикселей.
     
-    color: blue; <---  цвет символов голубой
+    color: blue; <---  цвет символов голубой.
     
   }
   
-  { <---  по наведению 
+  { <---  по наведению .
 
-    background: #ffc300; <--- задний фон этого цвета(#ffc300)
+    background: #ffc300; <--- задний фон этого цвета(#ffc300).
  
-    transition: width 2s, height 2s, background-color 2s, transform 4s;	<--- выполняет вышеперечисленные параметры 4 секунды 
+    transition: width 2s, height 2s, background-color 2s, transform 4s;	<--- выполняет вышеперечисленные параметры 4 секунды.
     
   }
 
@@ -163,71 +163,71 @@
 
 Для кнопок используются такие свойства CSS как:
 
-{ <---  всегда
+{ <---  всегда.
 
-	width: 200px; <--- ширина 200 пиксилей
+	width: 200px; <--- ширина 200 пиксилей.
 	
-	height: 33px; <--- высота 33 пикселя
+	height: 33px; <--- высота 33 пикселя.
 	
-	border-radius: 7px; <--- радиус 7 пикселей
+	border-radius: 7px; <--- радиус 7 пикселей.
 	
-	color: #35cece; <--- цвет символов (#35cece)
+	color: #35cece; <--- цвет символов (#35cece).
 	
-	margin-left: 33%; <--- внешний отступ слева направо 33%
+	margin-left: 33%; <--- внешний отступ слева направо 33%.
 	
-	margin-top: 3%; <--- внешний отступ сверху вниз 3%
+	margin-top: 3%; <--- внешний отступ сверху вниз 3%.
 	
-	background-color: #4b4ee5; <--- цвет заднего фона (#4b4ee5)
+	background-color: #4b4ee5; <--- цвет заднего фона (#4b4ee5).
 	
-	outline: none; <--- убирает цвет, стиль и ширину внешней границы
+	outline: none; <--- убирает цвет, стиль и ширину внешней границы.
 	
-	box-shadow: 0 0 20px #0004ff; <--- тень 20 пикселей этого цвета (#0004ff)
+	box-shadow: 0 0 20px #0004ff; <--- тень 20 пикселей этого цвета (#0004ff).
 	
-	border: 1px solid #9347e5; <--- рамка 1 пиксель сплошного этого цвета (#9347e5)
+	border: 1px solid #9347e5; <--- рамка 1 пиксель сплошного этого цвета (#9347e5).
 	
-	cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки 
+	cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки. 
 	
-	font-weight: bold; <--- насыщенность шрифта жирный
+	font-weight: bold; <--- насыщенность шрифта жирный.
 	
 }
-{ <---  по нажатию
+{ <---  по нажатию.
 
-	background-color: #0700ed; <--- задний фон этого цвета (#0700ed)
+	background-color: #0700ed; <--- задний фон этого цвета (#0700ed).
 	
-	color: white; <--- цвет символов белый
+	color: white; <--- цвет символов белый.
 	
 }
-{ <---  по наведению
+{ <---  по наведению.
 
-	box-shadow: 0 0 20px #c7f400; <--- тень 20 пикселей этого цвета (#c7f400)
+	box-shadow: 0 0 20px #c7f400; <--- тень 20 пикселей этого цвета (#c7f400).
 	
 }
 
 Для текстовых полей используются такие свойства CSS как:
 
-{ <---  всегда
+{ <---  всегда.
 
-	width: 400px; <--- ширина 400 пикселей
+	width: 400px; <--- ширина 400 пикселей.
 
-	height: 33px; <--- высота 33 пикселя
+	height: 33px; <--- высота 33 пикселя.
 
-	border-radius: 3px; <--- радиус 3 пикселя
+	border-radius: 3px; <--- радиус 3 пикселя.
 
-	margin-left: 33%; <--- внешний отступ слево направо 33%
+	margin-left: 33%; <--- внешний отступ слево направо 33%.
 
-	margin-top: 1%; <--- внешний отступ сверху вниз 1%
+	margin-top: 1%; <--- внешний отступ сверху вниз 1%.
 
-	border: 1px solid blue; <--- рамка 1 пиксель сплошный синий
+	border: 1px solid blue; <--- рамка 1 пиксель сплошный синий.
 
-	text-align: center; <--- текст в центре
+	text-align: center; <--- текст в центре.
 
-	display: block; <--- блочный элемент
+	display: block; <--- блочный элемент.
 
-	box-shadow: 0 0 30px #00ff5d; <--- тень 30 пикселей этого цвета(#00ff5d)
+	box-shadow: 0 0 30px #00ff5d; <--- тень 30 пикселей этого цвета(#00ff5d).
 
-	color: #4b4ee5; <--- цвет символов (#4b4ee5)
+	color: #4b4ee5; <--- цвет символов (#4b4ee5).
 
-	font-weight: bold; <--- насыщенность шрифта жирный
+	font-weight: bold; <--- насыщенность шрифта жирный.
 					
 }
 
@@ -254,3 +254,41 @@
 
 3 проверка - на правильность логина и пароля.
 (Если пароль или логин были введены не верно, то вылетит ошибка"Был введён неверный логин или пароль.".)
+
+Вот алгоритм с 3 проверками:
+{
+
+'use strict' <--- находит ошибки в коде
+let text1 = document.getElementById('text-1'); <--- создаёт переменную и кладёт в неё 1 текстовую строку.
+let text2 = document.getElementById('text-2'); <--- создаёт переменную и кладёт в неё 2 текстовую строку.
+let button = document.getElementById('button'); <--- создаёт переменную и кладёт в неё кнопку.
+
+button.addEventListener('click', function(){ <--- по нажатию кнопки будут происходить нижеперечисленные действия.
+	let a = document.getElementById('text-1').value; <--- создаёт переменную и кладёт в неё значение 1 текстовой строки.
+	let a1 = document.getElementById('text-2').value; <--- создаёт переменнную и кладёт в неё значение 2 текстовой строки.
+	let login = localStorage.getItem('login3965'); <--- создаёт переменную и кладёт в неё логин.
+	let password = localStorage.getItem('password3965'); <--- создаёт переменную и кладёт в неё пароль.
+
+	if(text1.checkValidity()&text2.checkValidity()){ <--- проверка, все ли обязательные поля были заполнены.
+		if(login!=undefined){ <--- проверка, существует ли аккаунт на этом компьютере.
+			if(login!=a|a1!=password){ <--- проверка, правильности пароля и логина.
+				alert("Был введён неверный логин или пароль.") <--- выносит ошибку "Был введён неверный логин или пароль.".
+			}
+			else <--- если и пароль и логин были введены верно
+			{	
+				location.href = '../HTML/version 1.0 (3).html'; <--- переносит вас в 4 часть - Приложение
+			};
+		}
+		else <--- если аккаунта не существует на этом компьютере
+		{
+			alert("На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже."); <--- выносит ошибку "На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже.".
+		};
+		
+	}
+	else <--- если не обязательные поля были заполнены
+	{
+		alert("Были введены не все данные.") <--- выносит ошибку "Были введены не все данные.".
+	};
+});
+
+}
