--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -51,11 +51,15 @@
 
 Из этого сайта видут 3 дороги в 2 места.
 
-2 дороги идут в 2 часть - регистрацию.
+2 дороги идут во 2 часть - регистрацию:
 
 1- ссылка которая меняет цвет на более светлый.
 
 2- кнопка которая также меняет цвет, но медленно.
+
+И 1 дорога ведёт в 3 часть - вход в сеть:
+
+3- ссылка которая меняет цвет на более светлый.
 
 Для кнопки используются такие свойства CSS как:
 
@@ -95,7 +99,6 @@
     
   }
 
-3 дорога идёт в 3 часть - вход в сеть.
 ### Регистрация:
 Это 2 по сложности страница.
 
@@ -231,7 +234,7 @@
 					
 }
 
-Из этого сайта идут так же 3 дороги.
+Из этого сайта идут так же 3 дороги:
 
 1- ссылка "Уже есть аккаунт?". Как не трудно было догадаться она ведёт в 3 часть - вход в сеть.
 
@@ -367,3 +370,11 @@
 	
 	font-weight: bold; <--- насыщенность шрифта жирный.
 }
+
+Из этого сайта аналогично идут 3 дороги:
+
+1- ссылка "Ещё нет аккаунта?". Как не трудно было догадаться она ведёт во 2 часть - Регистрация.
+
+2- кнопка "Вернуться на главную страницу". Она ведёт в 1 часть - Главная страница.
+
+3- кнопка "Войти в сеть.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - Приложение. Об этой части мы поговорим чуть позже.
