--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -378,3 +378,4 @@
 2- кнопка "Вернуться на главную страницу". Она ведёт в 1 часть - Главная страница.
 
 3- кнопка "Войти в сеть.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - Приложение. Об этой части мы поговорим чуть позже.
+### Приложение.
