--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -379,3 +379,27 @@
 
 3- кнопка "Войти в сеть.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - Приложение. Об этой части мы поговорим чуть позже.
 ### Приложение.
+Это самая сложная часть этого сайта.
+
+Здесь есть 6 проверок:
+
+1- проверка, были ли введены какие-то данные ранее.
+(Если да, то текущие данные заменятся на старые)
+
+2- проверка, были введены буквы или нет.
+(Если были, то вылетит ошибка"Были введены числа или не было введно ничего.Пожалуйста введите только цифры.".)
+
+3- проверка, заданы ли верхние параметры.
+(Если пользователь захочет ввести нижние параметры до верхних, то вылетит ошибка"Для начала задайте верхние параметры.".)
+
+4- проверка, закончились ли дни на которые расчитывались деньги.
+(Если да, то вылетит поздравление и все данные обнулятся, если нет, то алгоритм продолжится)
+
+5- проверка, за день было потрачено меньше нормы или нет.
+(Если да, то вылетит поздравление и ваша норма на завтра увеличется.)
+
+6- проверка, за день было потрачено больше нормы или нет.
+(Если да, то вылетит предупреждение и ваша норма на завтра уменьшится.)
+
+7- проверка, за день была потрачена ровно норма или нет.
+(Если да, то вылетит поздравление, но ваша норма на завтра останется прежней.)
