--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -118,7 +118,7 @@
 Соответственно если эти 3 проверки не выдали вам ошибки, т.е. вы ввели всё верно, то в Локальное хранилище добавится ваш логин и пароль.
 Так же вы перейдёте в 4 часть - Приложение.
 
-Вот алгоритм с 3 проверками:
+Вот полный алгоритм с пояснениями для каждой строки:
 {
 
 	'use strict' <--- находит ошибки в коде.
@@ -258,7 +258,7 @@
 3 проверка - на правильность логина и пароля.
 (Если пароль или логин были введены не верно, то вылетит ошибка"Был введён неверный логин или пароль.".)
 
-Вот алгоритм с 3 проверками:
+Вот полный алгоритм с пояснениями для каждой строки:
 {
 
 	'use strict' <--- находит ошибки в коде
@@ -381,7 +381,7 @@
 ### Приложение.
 Это самая сложная часть этого сайта.
 
-Здесь есть 6 проверок:
+Здесь есть 7 проверок:
 
 1- проверка, были ли введены какие-то данные ранее.
 (Если да, то текущие данные заменятся на старые)
@@ -403,3 +403,8 @@
 
 7- проверка, за день была потрачена ровно норма или нет.
 (Если да, то вылетит поздравление, но ваша норма на завтра останется прежней.)
+
+Вот полный алгоритм с пояснениями для каждой строки:
+{
+
+}
