--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -2,7 +2,7 @@
 Деньги не бесконечны.
 Приложение показывает, сколько стоит потратить сегодня, а сколько оставить на завтра.
 Считает новый бюджет на ходу, пока вы вводите трату.
-Приложение показывает правду: если потратите слишком сильно сегодня, уменьшит сумму на завтра.
+Приложение показывает правду: если потратите слишком много сегодня, уменьшится сумму на завтра.
 ## Функционал проекта:
 ### О регестрации и входе в сеть:
 Проект имеет систему регистрации и входа в сеть.
