--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -408,76 +408,75 @@
 
 {
 
-	'use strict'
-	let button = document.getElementById("button-2");
-	let button2 = document.getElementById("button-3");
-	let button3 = document.getElementById("button-4");
-	let select = document.getElementById("select");
-	let text  = document.getElementById("text-1");
-	let text1 = document.getElementById("date");
-	let text2 = document.getElementById("text-2");
-	let date = document.getElementById("date");
-	let div = document.getElementById("div1");
-	let c;
-	let c1;
-	let d1;
-	let b;
-	let b1;
-	let b2;
+	'use strict' <--- находит ошибки в коде.
+	let button = document.getElementById("button-2"); <--- создаёт переменную и кладёт туда 1 кнопку.
+	let button2 = document.getElementById("button-3"); <--- создаёт переменную и кладёт туда 2 кнопку.
+	let button3 = document.getElementById("button-4"); <--- создаёт переменную и кладёт туда 3 кнопку.
+	let select = document.getElementById("select"); <--- создаёт переменную и кладёт туда select.
+	let text  = document.getElementById("text-1"); <--- создаёт переменную и кладёт туда 1 текстовую строку.
+	let text2 = document.getElementById("text-2"); <--- создаёт переменную и кладёт туда 2 текстовую строку.
+	let date = document.getElementById("date"); <--- создаёт переменную и кладёт туда 3 текстовую строку.
+	let div = document.getElementById("div1"); <--- создаёт переменную и кладёт туда "div".
+	let c; <--- создаёт пустую переменную.
+	let c1; <--- создаёт пустую переменную.
+	let d1; <--- создаёт пустую переменную.
+	let b; <--- создаёт пустую переменную.
+	let b1; <--- создаёт пустую переменную.
+	let b2; <--- создаёт пустую переменную.
 
-	let h1 = document.createElement("h1");
+	let h1 = document.createElement("h1"); <--- создаёт переменную и кладёт в неё элемент HTML (h1).
 
-	let l = localStorage.getItem("date");
-	if(l!=undefined){
-		b1 = l;
-		date.value = l;
+	let l = localStorage.getItem("date"); <--- создаёт переменную и кладёт туда date из Локального хранилища.
+	if(l!=undefined){ <--- если "l" чему-то равно, то произойдут нижеперечисленные действия.
+		b1 = l; <--- присваивает переменной "b1" значение переменной l.
+		date.value = l; <--- присваивает значению date значение переменной l.
 	};
-	let l1 = localStorage.getItem("select");
-	if(l1!=undefined){
-		select.value = l1;
+	let l1 = localStorage.getItem("select"); <--- создаёт переменную и кладёт туда select из Локального хранилища.
+	if(l1!=undefined){ <--- если "l1" чему-то равно, то произойдут нижеперечисленные действия.
+		select.value = l1; <--- присваивает значению select значение переменной l1.
 	};
-	let l2 = localStorage.getItem("text");
-	if(l2!=undefined){
-		b = l2;
-		text.value = l2;
+	let l2 = localStorage.getItem("text"); <--- создаёт переменную и кладёт туда text из Локального хранилища.
+	if(l2!=undefined){ <--- если "l2" чему-то равно, то произойдут нижеперечисленные действия.
+		b = l2; <--- присваивает переменной "b "значение переменной l2.
+		text.value = l2; <--- присваивает значению текстовой строки значение переменной l2.
 	};
-	let l3 = localStorage.getItem("pre-last");
-	if(l3!=undefined){
-		c1 = l3;
-		c1 = +c1;
+	let l3 = localStorage.getItem("pre-last"); <--- создаёт переменную и кладёт туда pre-last из Локального хранилища.
+	if(l3!=undefined){ <--- если l3 чему-то равно, то произойдут нижеперечисленные действия.
+		c1 = l3; <--- присваивает переменно "c1" значение переменной l3.
+		c1 = +c1; <--- изменяет тип переменной "c1" с String на Number.
 	};
-	let l4 = localStorage.getItem("today");
-	if(l4!=undefined){
-		b2 = l4;
-		b2 = +b2;
-		text2.value = l4;
+	let l4 = localStorage.getItem("today"); <--- создаёт переменную и кладёт туда today из Локального хранилища.
+	if(l4!=undefined){ <--- если l4 чему-то равно, то произойдут нижеперечисленные действия.
+		b2 = l4; <--- присваивает переменной "b2" значение l4.
+		b2 = +b2; <--- изменяет тип переменной "b2" с String на Number.
+		text2.value = l4; <--- присваивает значению текстовой строки значение переменной l4.
 	};
-	let l5 = localStorage.getItem("last");
-	if(l5!=undefined){
-		c = l5;
-		c = +c;
+	let l5 = localStorage.getItem("last"); <--- создаёт переменную и кладёт туда last из Локального хранилища.
+	if(l5!=undefined){ <--- если l5 чему-то равно, то произойдут нижеперечисленные действия.
+		c = l5; <--- присваивает переменной "c" значение l4.
+		c = +c;; <--- изменяет тип переменной "c" с String на Number.
 	};
-	if(c!=undefined&select.value!=undefined){
-		div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
-	};
-
-	function isDigit(str) {
-		return str && !/[^\d]/.test(str);
+	if(c!=undefined&select.value!=undefined){ <--- если у переменной "c" есть значение и значение selectа не равно undefined то произойдут нижеперечисленные действия.
+		div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value; <--- создаёт заголовок 1 уровня и помещает в него следующие элементы: "Завтра вам стоит потратить не больше " +c +select.value.
 	};
 
-	button3.addEventListener('click', function(){
-		localStorage.removeItem('date');
-		localStorage.removeItem('select');
-		localStorage.removeItem('text');
-		localStorage.removeItem('pre-last');
-		localStorage.removeItem('today');
-		localStorage.removeItem('last');
-		localStorage.removeItem('login3965');
-		localStorage.removeItem('password3965');
-		location.href = 'version 1.0 (1).html';
+	function isDigit(str) { <--- создаёт функцию с название isDigit
+		return str && !/[^\d]/.test(str); <--- Проверяет строку на наличие букв, если есть то вылетает false, если нет то вылетает true.
+	};
+
+	button3.addEventListener('click', function(){ <--- по нажатию на кнопки "button3" произойдут нижеперечисленные действия.
+		localStorage.removeItem('date'); <--- из Локального хранилище удалится date.
+		localStorage.removeItem('select'); <--- из Локального хранилище удалится select.
+		localStorage.removeItem('text'); <--- из Локального хранилище удалится text.
+		localStorage.removeItem('pre-last'); <--- из Локального хранилище удалится pre-last.
+		localStorage.removeItem('today'); <--- из Локального хранилище удалится today.
+		localStorage.removeItem('last'); <--- из Локального хранилище удалится last.
+		localStorage.removeItem('login3965'); <--- из Локального хранилище удалится login3965.
+		localStorage.removeItem('password3965'); <--- из Локального хранилище удалится password3965.
+		location.href = 'version 1.0 (1).html'; <--- переносит пользователя на 1 часть - Главная страница.
 	});
 
-	button.addEventListener('click', function(){
+	button.addEventListener('click', function(){ <--- по нажатию на кнопки "button" произойдут нижеперечисленные действия.
 
 		if((isDigit(text.value)) === true&(isDigit(date.value)) === true){
 			let a = text.value;
