--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -478,11 +478,11 @@
 
 	button.addEventListener('click', function(){ <--- по нажатию на кнопки "button" произойдут нижеперечисленные действия.
 
-		if((isDigit(text.value)) === true&(isDigit(date.value)) === true){
-			let a = text.value;
-			b = +a;
-			localStorage.setItem('text', b) 
-			let d = date.value;
+		if((isDigit(text.value)) === true&(isDigit(date.value)) === true){ <--- если в 2 текстовых строках нет букв, то произойдут нижеперечисленные действия.
+			let a = text.value; <--- создаёт переменную "a" и кладёт в неё значение текстовой строки.
+			b = +a; <--- присваивает переменной b значение переменной a и меняет тип этой переменной с String на Number.
+			localStorage.setItem('text', b) <--- создаёт ключ "text" в Локальном хранилище и кладёт в него переменную "b".
+			let d = date.value;  <--- 
 			b1 = +d;
 			localStorage.setItem('date', b1);	
 			c = b/b1;
