--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -464,7 +464,7 @@
 		return str && !/[^\d]/.test(str); <--- Проверяет строку на наличие букв, если есть то вылетает false, если нет то вылетает true.
 	};
 
-	button3.addEventListener('click', function(){ <--- по нажатию на кнопки "button3" произойдут нижеперечисленные действия.
+	button3.addEventListener('click', function(){ <--- по нажатию кнопки "button3" произойдут нижеперечисленные действия.
 		localStorage.removeItem('date'); <--- из Локального хранилище удалится date.
 		localStorage.removeItem('select'); <--- из Локального хранилище удалится select.
 		localStorage.removeItem('text'); <--- из Локального хранилище удалится text.
@@ -476,14 +476,14 @@
 		location.href = 'version 1.0 (1).html'; <--- переносит пользователя на 1 часть - Главная страница.
 	});
 
-	button.addEventListener('click', function(){ <--- по нажатию на кнопки "button" произойдут нижеперечисленные действия.
+	button.addEventListener('click', function(){ <--- по нажатию кнопки "button" произойдут нижеперечисленные действия.
 
 		if((isDigit(text.value)) === true&(isDigit(date.value)) === true){ <--- если в 2 текстовых строках нет букв, то произойдут нижеперечисленные действия.
 			let a = text.value; <--- создаёт переменную "a" и кладёт в неё значение текстовой строки.
 			b = +a; <--- присваивает переменной b значение переменной a и меняет тип этой переменной с String на Number.
 			localStorage.setItem('text', b) <--- создаёт ключ "text" в Локальном хранилище и кладёт в него переменную "b".
-			let d = date.value;  <--- 
-			b1 = +d;
+			let d = date.value;  <--- создаёт переменную "d" и присваивает ей значение текстовой строки "date". 
+			b1 = +d;  <--- присваивает переменной b1 значение переменной d и меняет её тип с String на Number.
 			localStorage.setItem('date', b1);	
 			c = b/b1;
 			localStorage.setItem('last', c);
