--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -126,7 +126,7 @@
 	let password = document.getElementById('text-2'); <--- создаёт переменную и кладёт в неё строку с паролем.
 	let password2 = document.getElementById('text-3'); <--- создаёт переменную и кладёт в неё строку с подтверждением пароля.
 	let button = document.getElementById('button'); <--- создаёт переменную и кладёт в неё кнопку
-	alert("Внимание!\nЕсли вы при уже имеющимся аккаунте создадите новый, то старый аккаунт полностью удалится и заменится на этот."); <---    предупреждение.
+	alert("Внимание!\nЕсли вы при уже имеющимся аккаунте создадите новый, то старый аккаунт полностью удалится и заменится на этот."); <---  выводит  предупреждение.
 	button.addEventListener('click', function(){ <--- воспроизводит нижеперечисленные действия по нажатию кнопки.
 	let a = document.getElementById('text-1').value; <--- создаёт переменную и кладёт в неё значение строки с логином.
 	let a1 = document.getElementById('text-2').value; <--- создаёт переменную и кладёт в неё значение строки с паролем
@@ -148,17 +148,17 @@
 	}
 	else <--- если пароли не совпадают
 	{
-		alert("Пароли не совпадают.") <--- выносит ошибку "Пароли не совпадают.".
+		alert("Пароли не совпадают.") <--- выводит ошибку "Пароли не совпадают.".
 	};
 	}
 	else <--- если 1 элемент- пробел
 	{
-	alert("В строках 1 элемент не должен быть пробелом.") <--- выносит ошибку "В строках 1 элемент не должен быть пробелом.".
+	alert("В строках 1 элемент не должен быть пробелом.") <--- выводит ошибку "В строках 1 элемент не должен быть пробелом.".
 	}
 	}
 	else <--- если не все поля заполнены
 	{
-		alert("Не все обязательные поля были заполнены.") <--- выносит ошибку "Не все обязательные поля были заполнены.".
+		alert("Не все обязательные поля были заполнены.") <--- выводит ошибку "Не все обязательные поля были заполнены.".
 	};
 	});
 
@@ -279,7 +279,7 @@
 
 	if(login!=a|a1!=password){ <--- проверка, правильности пароля и логина.
 
-	alert("Был введён неверный логин или пароль.") <--- выносит ошибку "Был введён неверный логин или пароль.".
+	alert("Был введён неверный логин или пароль.") <--- выводит ошибку "Был введён неверный логин или пароль.".
 	}
 
 	else <--- если и пароль и логин были введены верно
@@ -291,13 +291,13 @@
 
 	else <--- если аккаунта не существует на этом компьютере
 	{
-	alert("На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже."); <--- выносит ошибку "На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже.".
+	alert("На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже."); <--- выводит ошибку "На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже.".
 	};		
 	}
 
 	else <--- если не обязательные поля были заполнены
 	{
-	alert("Были введены не все данные.") <--- выносит ошибку "Были введены не все данные.".
+	alert("Были введены не все данные.") <--- выводит ошибку "Были введены не все данные.".
 	};
 	});
 
@@ -480,57 +480,57 @@
 
 		if((isDigit(text.value)) === true&(isDigit(date.value)) === true){ <--- если в 2 текстовых строках нет букв, то произойдут нижеперечисленные действия.
 			let a = text.value; <--- создаёт переменную "a" и кладёт в неё значение текстовой строки.
-			b = +a; <--- присваивает переменной b значение переменной a и меняет тип этой переменной с String на Number.
+			b = +a; <--- присваивает переменной "b" значение переменной a и меняет тип этой переменной с String на Number.
 			localStorage.setItem('text', b) <--- создаёт ключ "text" в Локальном хранилище и кладёт в него переменную "b".
 			let d = date.value;  <--- создаёт переменную "d" и присваивает ей значение текстовой строки "date". 
-			b1 = +d;  <--- присваивает переменной b1 значение переменной d и меняет её тип с String на Number.
-			localStorage.setItem('date', b1);	
-			c = b/b1;
-			localStorage.setItem('last', c);
-			c1 = c;
-			localStorage.setItem('pre-last', c1);
-			div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
+			b1 = +d;  <--- присваивает переменной "b1" значение переменной "d" и меняет её тип с String на Number.
+			localStorage.setItem('date', b1); <--- создаёт ключ "text" в Локальном хранилище и кладёт в него переменную "b1".	
+			c = b/b1;  <--- присваивает переменной "c" значение "b/b1".
+			localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
+			c1 = c; <--- присваивает переменной "c1" значение переменной "с".
+			localStorage.setItem('pre-last', c1); <--- создаёт ключ "pre-last" в Локальном хранилище и кладёт в него переменную "c1".
+			div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value; <--- создаёт заголовок 1 уровня и помещает в него следующие элементы: "Завтра вам стоит потратить не больше " +c +select.value.
 		}
-		else
+		else <--- если в 2 текстовых строках есть буквы, то произойдут нижеперечисленные действия.
 		{
-			alert("Были введены числа или не было введно ничего.\nПожалуйста введите только цифры.")
+			alert("Были введены числа или не было введно ничего.\nПожалуйста введите только цифры.") <--- выводит ошибку.
 		};
 
 	});
 
-	button2.addEventListener('click', function(){
-		if(div.appendChild(h1).innerHTML === ""){
-			alert("Для начала задайте верхние параметры.");
+	button2.addEventListener('click', function(){ <--- по нажатию кнопки "button2" произойдут нижеперечисленные действия.
+		if(div.appendChild(h1).innerHTML === ""){ <--- если div.appendChild(h1).innerHTML ничему не равен, то произойдут нижеперечисленные действия.
+			alert("Для начала задайте верхние параметры."); <--- выводит ошибку "Для начала задайте верхние параметры.".
 		}
-		else
+		else <--- если div.appendChild(h1).innerHTML равен чему-либо, то произойдут нижеперечисленные действия.
 		{	
-			if((isDigit(text2.value)) === true){
-				b1=b1-1;
-				date.value = b1;
-				localStorage.setItem('date', b1);
-				if(b1>0){
-					let a1 = text2.value;
-					b2 = +a1;
-					c = +c;
-					localStorage.setItem('today', b2);
-					if(c<b2){
-						d1 = c-b2;
-						c = c1;
-						localStorage.setItem('last', c);
-						c = c+d1;
-						localStorage.setItem('last', c);
-						alert("Увы! Вы потратили больше нормы на " +(-d1) +select.value);
-						alert("Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value);
+			if((isDigit(text2.value)) === true){ <--- если в текстовой строке "text2" нет цифр, то произойдут нижеперечисленные действия.
+				b1=b1-1; <--- переменной "b1" присваивается значение "b1-1".
+				date.value = b1; <--- значение текстовой строки "date" становится равно значение переменной "b1".
+				localStorage.setItem('date', b1); <--- создаёт ключ "date" в Локальном хранилище и кладёт в него переменную "b1".
+				if(b1>0){ <--- если значение переменной "b1" меньше нуля, то произойдут нижеперечисленные действия.
+					let a1 = text2.value; <--- создаёт переменнную "a1" и присваивает ей значение текстовой строки "text2".
+					b2 = +a1; <--- присваивает переменной "b2" значение переменной "a1" и меняет тип этой переменной с String на Number.
+					c = +c; <--- меняет тип переменной "c" с String на Number.
+					localStorage.setItem('today', b2); <--- создаёт ключ "today" в Локальном хранилище и кладёт в него переменную "b2".
+					if(c<b2){ <--- если значение переменной "c" меньше значения переменной "b2", то произойдут нижеперечисленные действия.
+						d1 = c-b2; <--- присваивает переменной "d1" значение "c-b2".
+						c = c1; <--- присваивает переменной "c" значение переменной "c1".
+						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
+						c = c+d1; <--- присваивает переменной "c" значение "c+d1".
+						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
+						alert("Увы! Вы потратили больше нормы на " +(-d1) +select.value); <--- выводит передупреждение "Увы! Вы потратили больше нормы на +(-d1) +select.value".
+						alert("Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value); <--- выводит передупреждение "Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value.
 						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
 					}
-					else
-					if(c>b2){
-						d1 = c-b2;
-						c = c1;
-						localStorage.setItem('last', c);
-						c = c+d1;
-						localStorage.setItem('last', c);
-						alert("Вау! Вы сэкономили " +d1 +select.value);
+					else <--- если значение переменной "c" больше значения переменной "b2", то произойдут нижеперечисленные действия.
+					if(c>b2){ <--- если значение переменной "c" больше значение переменной "b2", то произойдут нижеперечисленные действия.
+						d1 = c-b2; <--- присваивает переменной "d1" значение "c-b2".
+						c = c1; <--- присваивает переменной "c" значение переменной "c1".
+						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
+						c = c+d1; <--- присваивает переменной "c" значение "c+d1".
+						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
+						alert("Вау! Вы сэкономили " +d1 +select.value); <--- выводит поздравление "Вау! Вы сэкономили " +d1 +select.value.
 						alert("Теперь ваша дозволенная трата на завтра увеличится на " +d1 +select.value);
 						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
 					}
