--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -148,17 +148,17 @@
 	}
 	else <--- если пароли не совпадают
 	{
-		alert("Пароли не совпадают.") <--- выводит ошибку "Пароли не совпадают.".
+		alert("Пароли не совпадают.") <--- выводит ошибку, "Пароли не совпадают.".
 	};
 	}
 	else <--- если 1 элемент- пробел
 	{
-	alert("В строках 1 элемент не должен быть пробелом.") <--- выводит ошибку "В строках 1 элемент не должен быть пробелом.".
+	alert("В строках 1 элемент не должен быть пробелом.") <--- выводит ошибку, "В строках 1 элемент не должен быть пробелом.".
 	}
 	}
 	else <--- если не все поля заполнены
 	{
-		alert("Не все обязательные поля были заполнены.") <--- выводит ошибку "Не все обязательные поля были заполнены.".
+		alert("Не все обязательные поля были заполнены.") <--- выводит ошибку, "Не все обязательные поля были заполнены.".
 	};
 	});
 
@@ -279,7 +279,7 @@
 
 	if(login!=a|a1!=password){ <--- проверка, правильности пароля и логина.
 
-	alert("Был введён неверный логин или пароль.") <--- выводит ошибку "Был введён неверный логин или пароль.".
+	alert("Был введён неверный логин или пароль.") <--- выводит ошибку, "Был введён неверный логин или пароль.".
 	}
 
 	else <--- если и пароль и логин были введены верно
@@ -291,13 +291,13 @@
 
 	else <--- если аккаунта не существует на этом компьютере
 	{
-	alert("На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже."); <--- выводит ошибку "На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже.".
+	alert("На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже."); <--- выводит ошибку, "На этом компьютере аккаунта не существует.\nСоздайте его по ссылке ниже.".
 	};		
 	}
 
 	else <--- если не обязательные поля были заполнены
 	{
-	alert("Были введены не все данные.") <--- выводит ошибку "Были введены не все данные.".
+	alert("Были введены не все данные.") <--- выводит ошибку, "Были введены не все данные.".
 	};
 	});
 
@@ -519,49 +519,49 @@
 						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
 						c = c+d1; <--- присваивает переменной "c" значение "c+d1".
 						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
-						alert("Увы! Вы потратили больше нормы на " +(-d1) +select.value); <--- выводит передупреждение "Увы! Вы потратили больше нормы на +(-d1) +select.value".
-						alert("Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value); <--- выводит передупреждение "Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value.
-						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
+						alert("Увы! Вы потратили больше нормы на " +(-d1) +select.value); <--- выводит передупреждение, "Увы! Вы потратили больше нормы на +(-d1) +select.value".
+						alert("Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value); <--- выводит передупреждение, "Теперь ваша дозволенная трата на завтра уменьшится на " +(-d1) +select.value.
+						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value; <--- создаёт заголовок 1 уровня и помещает в него следующие элементы: "Завтра вам стоит потратить не больше " +c +select.value.
 					}
-					else <--- если значение переменной "c" больше значения переменной "b2", то произойдут нижеперечисленные действия.
+					else <--- в другом случае.
 					if(c>b2){ <--- если значение переменной "c" больше значение переменной "b2", то произойдут нижеперечисленные действия.
 						d1 = c-b2; <--- присваивает переменной "d1" значение "c-b2".
 						c = c1; <--- присваивает переменной "c" значение переменной "c1".
 						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
 						c = c+d1; <--- присваивает переменной "c" значение "c+d1".
 						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
-						alert("Вау! Вы сэкономили " +d1 +select.value); <--- выводит поздравление "Вау! Вы сэкономили " +d1 +select.value.
-						alert("Теперь ваша дозволенная трата на завтра увеличится на " +d1 +select.value);
-						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
+						alert("Вау! Вы сэкономили " +d1 +select.value); <--- выводит поздравление, "Вау! Вы сэкономили " +d1 +select.value.
+						alert("Теперь ваша дозволенная трата на завтра увеличится на " +d1 +select.value); <--- выводит поздравление, "Теперь ваша дозволенная трата на завтра увеличится на " +d1 +select.value.
+						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value; <--- создаёт заголовок 1 уровня и помещает в него следующие элементы: "Завтра вам стоит потратить не больше " +c 
 					}
-					else
-					if(c===b2){
-						c = c1;
-						alert("Так держать! Сегодня вы потратили не больше дозволенного.")
-						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value;
-						localStorage.setItem('last', c);
+					else <--- в другом случае.
+					if(c===b2){ <--- если значение переменной "c" равен значению переменной "b2", то произойдут нижеперечисленные действия.
+						c = c1; <--- переменной "c" присваивается значение переменной "c1"
+						alert("Так держать! Сегодня вы потратили не больше дозволенного.") <--- выводит поздравление, "Так держать! Сегодня вы потратили не больше дозволенного.".
+						div.appendChild(h1).innerHTML = "Завтра вам стоит потратить не больше " +c +select.value; <--- создаёт заголовок 1 уровня и помещает в него следующие элементы: "Завтра вам стоит потратить не больше " +c. 
+						localStorage.setItem('last', c); <--- создаёт ключ "last" в Локальном хранилище и кладёт в него переменную "c".
 
 					}
 				}
-				else
-				if(b1===0){
-					alert("Поздравляем, вы выжили.");
-					text.value = "";
-					text1.value = "";
-					text2.value = "";
-					select.value = " руб."; 
-					div.appendChild(h1).innerHTML = "";
-					localStorage.removeItem('date');
-					localStorage.removeItem('select');
-					localStorage.removeItem('text');
-					localStorage.removeItem('pre-last');
-					localStorage.removeItem('today');
-					localStorage.removeItem('last');
+				else <--- иначе.
+				if(b1===0){ <--- если значение переменно "b1" равно нулю, то произойдут нижеперечисленные действия.
+					alert("Поздравляем, вы выжили."); <--- выводит финальное поздравление, "Поздравляем, вы выжили.".
+					text.value = ""; <--- переменной "text" присваивается значение "".
+					text1.value = ""; <--- переменной "text1" присваивается значение "".
+					text2.value = ""; <--- переменной "text2" присваивается значение "".
+					select.value = " руб."; <--- переменной "select" присваивается значение "руб.".
+					div.appendChild(h1).innerHTML = ""; <--- создаёт заголовок 1 уровня и помещает в него следующие элементы: "Завтра вам стоит потратить не больше " +c.
+					localStorage.removeItem('date'); <--- из Локального хранилище удалится date.
+					localStorage.removeItem('select'); <--- из Локального хранилище удалится select.
+					localStorage.removeItem('text'); <--- из Локального хранилище удалится text.
+					localStorage.removeItem('pre-last'); <--- из Локального хранилище удалится pre-last.
+					localStorage.removeItem('today'); <--- из Локального хранилище удалится today.
+					localStorage.removeItem('last'); <--- из Локального хранилище удалится last.
 				};
 			}	
-			else
+			else <--- иначе.
 			{
-				alert("Были введены числа или не было введно ничего.\nПожалуйста введите только цифры.");
+				alert("Были введены числа или не было введно ничего.\nПожалуйста введите только цифры."); <--- выводит ошибку, "Были введены числа или не было введно ничего.Пожалуйста введите только цифры.".
 			};
 		};	
 	});
